  
Video Info/OSD show plot on up.
Video Info/OSD clearlogo preference
Timer and Search PVR dialogs
PVR Channel OSD number length fix
PVR Channel OSD revamp
Fixed text color visibility in add on settings

[B]0.2.5[/B]
Revamp of view and power menu
Revamp of Context menu 
  - Still to do: pictures/addons menu
Added options for dark/light osd
Altered plot size for readability
Modified channels and epg osd for pvr readability
Removed videowindow from pvr slide out menu for animation speed/smoothness

[B]0.2.6[/B]
Massive cleanup of unused images, repo size now 55mb
Moved out studioflags, audioflags, to extras folder
Moved out icons to extras folder
Cleaned up leftover code from glass rings, borders and covers
Removed glass edging from simple home screen
Added gap to simplehome screen to make it more consistent with rest of theme
Weather menu
Pictures menu
Fix for profile on simple homescreen so not hidden when favourites visible
Added ability to choose between resume and play on home widgets
Smart playlist dialogs complete
Content settings dialog
Network settings dialog
Addon settings dialog
PVR group management dialog

[B]0.3.0[/B]
All main categories (movies, tvshows, music, pictures, programs) customisable
Dropped custom category (old games menu)
Pictures now has a custom submenu
Rearranged categories so LiveTV is on the left of movies

[B]0.3.1[/B]
Fixed icon selection not showing image
Can enable and disable category from custom home items menu
Auto prompt to select icon from extras after choosing path for custom item
Fixed weather scrolling issue (hopefully?)
Fixed thumbs in plugins to show large and small
Fixed weather panel issue

[B]0.3.2[/B]
Fixed bug when selecting favourites being hidden by icon selection
Fixed bug when selecting playlist incorrectly shows "select icon" instead of "select file"
Added thumbnails view to advanced launcher.
Added years, studios, genres as defaults for movies
Fixed bug in Reel
Fix thumbnails to show scrolling text