@@ -60,7 +60,7 @@
 						<width>128</width>
 						<height>128</height>
 						<texture>weather/small/$INFO[Weather.FanartCode].png</texture>
-						<colordiffuse>Mod_Tags</colordiffuse>
+						<colordiffuse>mod-infotags</colordiffuse>
 						<animation effect="fade" start="0" end="0" time="0" condition="true">Conditional</animation>
 					</control>
 					<control type="label">
